# Clarity-

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
clarity/: __init__.py  auth.py  cli.py  config.py  database.py  models.py  server.py
clarity-engine/: README.md  index.html  package-lock.json  package.json  server.ts  vite.config.ts
clarity-engine/src/: App.tsx  index.css  types.ts
clarity-engine/src/components/: AiChatView.tsx  ArchitectureMapView.tsx  AuthView.tsx  DocsModal.tsx  HomeDashboardView.tsx  LandingView.tsx  NewScanModal.tsx  PricingModal.tsx  SecurityAuditView.tsx  SettingsView.tsx  SideNavBar.tsx  TechStackView.tsx  TopNavBar.tsx
clarity-engine/src/data/: initialData.ts
clarity/audit/: __init__.py  checker.py  scanner.py
clarity/explain/: __init__.py  diagram_gen.py  fetcher.py  pipeline_tracer.py  stack_detector.py  structure_mapper.py  summarizer.py
clarity/explain/web/: animate.js  styles.css  template.html
clarity/web/: app.js  index.html  styles.css
tests/: test_checker.py  test_pipeline_tracer.py  test_scanner.py  test_stack_detector.py
