[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clarity"
version = "0.1.0"
description = "A CLI tool to audit env secrets and generate animated architecture diagrams."
authors = [{name = "Naveen"}]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "requests>=2.31.0",
    "google-genai>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.scripts]
clarity = "clarity.cli:app"

[tool.setuptools.packages.find]
include = ["clarity*"]

[tool.setuptools.package-data]
"clarity.explain.web" = ["*.html", "*.css", "*.js"]
